tests/sources/invalid/classes/implicit_var_method_call_on_untyped.fire
// Bare assignment to a never-declared name is always an error; using that
// name as the receiver of a later method call cascades into a second
// undefined-identifier error.
import @firescript/std.io.println;

class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    fn get() -> int32 {
        return this.v;
    }
}

fn main() -> int32 {
    a = println(1);  //~ ERROR FS-PARSE-0003 @5
    b = a.get();  //~ ERROR FS-PARSE-0003 @9
//~^ ERROR FS-PARSE-0003 @5
    return 0;
}
